--- a/2_COFEE_MASTERS/styles.css
+++ b/2_COFEE_MASTERS/styles.css
@@ -126,7 +126,7 @@ body {
   background-color: rgba(0,0,0,0);
   border: 2px #885a2d solid;
   padding: 8px;
-  border-radius: 100px;
+  border-radius: 50px;
   width: 100%;
   text-indent: 18px;
   font-size: 18px;
@@ -157,6 +157,10 @@ body {
   width: 100%;
   max-width: 500px;
   margin-bottom: 30px;
+  background-color: #eee1d5;
+
+  border-radius: 5px;
+  box-shadow: 0 1px 3px rgb(0 0 0 / 0.2);
 }
 
 .totals-table td {
