--- a/2_COFEE_MASTERS/styles.css
+++ b/2_COFEE_MASTERS/styles.css
@@ -1,12 +1,14 @@
 * {
-  box-sizing: border-box;
-}
+  box-sizing: border-box;}
 
 body {
   margin: 0;
   padding: 0;
-  background-color: #efefef;
+  background-color: #b396aa;
   font-family: 'Open Sans', sans-serif;
+  max-width: 1200px;
+  margin: auto auto;
+  display: grid;
 }
 
 .page {
@@ -23,7 +25,8 @@ body {
 }
 
 .main-nav {
-  background-color: #43281c;
+  background-color: #76106e;
+  border-radius: 0px 0px 50px 50px; 
   color: #fbf2c0;
   font-size: 16px;
   display: flex;
@@ -40,11 +43,12 @@ body {
 
 .box {
   background-color: #eee1d5;
-  border-radius: 5px;
+  border-radius: 30px 60px 20px 60px;
   box-shadow: 0 1px 3px rgb(0 0 0 / 0.2);
   padding: 15px;
   margin-bottom: 20px;
   width: 100%;
+  box-shadow: #76106e 0px 0px 10px;
 }
 
 .box-title {
@@ -160,7 +164,7 @@ body {
   background-color: #eee1d5;
 
   border-radius: 5px;
-  box-shadow: 0 1px 3px rgb(0 0 0 / 0.2);
+  box-shadow: #76106e 0px 2px 5px;
 }
 
 .totals-table td {
@@ -177,9 +181,10 @@ body {
 
 .checkout {
   background-color: #deb993;
-  border: none;
+  border: 2px;
   padding: 10px 30px;
   width: 100%;
   border-radius: 100px;
   font-size: 16px;
+  box-shadow: #76106e 0px 2px 5px;
 }
