--- a/7_portfolio_FEM/style.css
+++ b/7_portfolio_FEM/style.css
@@ -23,8 +23,64 @@ html {
 body {
   font-size: var(--base-font-size);
   font-family: "Inter", sans-serif;
+  background-color: var(--platinum);
+  color: var(--onyx);
+}
+
+h1{
+    margin: 0%;
+    font-size: calc(var(--base-font-size) * 2.9);
+}
+
+h2{
+    margin: 0%;
+    font-size: var(--base-font-size);
+    text-transform: uppercase;
+    color: var(--windsurfing);
+    letter-spacing: 0.25em;
+}
+
+h3{
+    margin: 0%;
+
+}
+
+p{
+    line-height: 1.5;
+}
+
+a{
+    color: var(--windsurfing);
+}
+
+a:hover{
+    color: var(--marina);
 }
 /* make sure images don't exceed the width of the window */
 img {
   max-width: 100%;
+  border-radius: var(--corners);
+}
+
+
+.icons{
+    list-style-type: none;
+    margin: 0%;
+    padding: 0%;
+    display: flex;
+    flex-flow: row wrap;
+    align-items: flex-end;
+    gap: 2rem;
+}
+
+ul svg{
+    width: 36px;
+    height: 36px;
+}
+
+.social{
+    fill: var(--windsurfing);
+}
+.social:hover{
+    fill: var(--marina);
 }
