--- a/7_portfolio_FEM/style.css
+++ b/7_portfolio_FEM/style.css
@@ -26,7 +26,13 @@ body {
   background-color: var(--platinum);
   color: var(--onyx);
 }
-
+.wrapper{
+  /*this max width for making a limit in the right and lift*/
+  max-width: 900px;
+  margin: 0 auto;
+  /*padding for making some space around the html elemnts*/
+  padding: 1rem ;
+}
 h1{
     margin: 0%;
     font-size: calc(var(--base-font-size) * 2.9);
@@ -71,6 +77,7 @@ img {
     flex-flow: row wrap;
     align-items: flex-end;
     gap: 2rem;
+    justify-content: center;
 }
 
 ul svg{
@@ -83,4 +90,18 @@ ul svg{
 }
 .social:hover{
     fill: var(--marina);
+}
+
+/*about me lyout styling*/
+.main-article{
+  display: grid;
+  grid-template-columns: 1fr;
+  gap: 2rem;
+  text-align: center;
+}
+
+.main-article img{
+  margin: 0 auto;
+  
+
 }
