--- a/7_portfolio_FEM/style.css
+++ b/7_portfolio_FEM/style.css
@@ -53,6 +53,8 @@ h3{
 
 p{
     line-height: 1.5;
+    text-align: justify;
+  text-justify: inter-word;
 }
 
 a{
@@ -102,6 +104,10 @@ ul svg{
 
 .main-article img{
   margin: 0 auto;
-  
+  object-fit: cover;
+  object-position: top;
+  height: 190px;
+  width: 260px;
+  overflow: hidden;
 
 }
