--- a/7_portfolio_FEM/style.css
+++ b/7_portfolio_FEM/style.css
@@ -7,20 +7,24 @@
   --gray: #9a9a9a;
   --onyx: #3c3d44;
   --charcoal: #343c47;
+  --ld-bkgd: light-dark(var(--platinum), var(--charcoal));
+  --ld-text: light-dark(var(--onyx), var(--white));
+  --ld-projects: light-dark(var(--white), #2E313D);
+  --ld-blue: light-dark(var(--windsurfing), #6DADD0);
   --corners: 24px 0;
   --corners-sm: 10px 0;
   --base-font-size: 1rem;
-  --ld-bkgd: light-dark(var(--platinum), var(--charcoal));
-  --ld-text: light-dark(var(--onyx), var(--white));
-  --ld-projects: light-dark(var(--white), #2e313d);
-  --ld-blue: light-dark(var(--windsurfing), #6dadd0);
-
 }
 /* set the box sizing to border-box for layouts */
-
 html {
   box-sizing: border-box;
   color-scheme: light dark;
+}
+html:has(#mode-switcher [value="light"]:checked){
+  color-scheme: light;
+}
+html:has(#mode-switcher [value="dark"]:checked){
+  color-scheme: dark;
 }
 *,
 *::before,
@@ -66,6 +70,14 @@ a {
 }
 a:hover {
   color: var(--marina);
+}
+fieldset {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: center;
+  gap: 3rem;
+  max-width: 300px;
+  margin: 0 0 5rem auto;
 }
 /* svg styling */
 .icons {
@@ -113,10 +125,9 @@ main {
   display: flex;
   flex-flow: column nowrap;
   gap: 3rem;
-  background-color: var(--ld-projects);
 }
 .project {
-  background-color: var(--white);
+  background-color: var(--ld-projects);
   padding: 3rem;
   border-radius: var(--corners);
   display: grid;
@@ -173,7 +184,7 @@ footer {
   margin: 2rem 0;
 }
 .footer-text .social {
-  fill: var(--ebony);
+  fill: var(--ld-text);
 }
 .footer-text .social:hover {
   fill: var(--marina);
