--- a/7_portfolio_FEM/style.css
+++ b/7_portfolio_FEM/style.css
@@ -71,13 +71,7 @@ a {
 a:hover {
   color: var(--marina);
 }
-fieldset {
-  display: flex;
-  flex-flow: row wrap;
-  justify-content: center;
-  gap: 3rem;
-  max-width: 300px;
-  margin: 0 0 5rem auto;
+
 }
 /* svg styling */
 .icons {
@@ -194,18 +188,23 @@ footer {
 	get rid of the fieldset styling and keep
 	this all on a single line
 */
+
+@layer switch{
+
+}
+
 .radio-switch {
 	border: none;
 	padding: 0;
 	white-space: nowrap;
+  display: flex;
+  justify-content: flex-end;
+  margin-bottom: 2rem;
 }
 
-/*
-	radio button groups often benefit from a legend to
-	provide context as to what the different
-	options pertain to. Ideally this would be visible to all
-	users, but you know...
-*/
+
+
+
 .radio-switch legend {
 	font-size: 2px;
 	opacity: 0;
@@ -225,30 +224,16 @@ footer {
 	line-height: 2;
 	position: relative;
 	z-index: 2;
+  font-size: 0.9rem ;
 }
 
-/*
-	inputs set to opcacity 0 are still accessible.
-	Apparently there can be issues targetting inputs with
-	Dragon speech recognition software if you use the typical
-	'visually-hidden' class...so might as well just avoid that issue...
-*/
+
 .radio-switch input {
 	opacity: 0;
 	position: absolute;
 }
 
-/*
-	a 2 option toggle can only have 2 options...so instead of
-	adding more classes, i'm just going to use some
-	structural pseudo-classes to target them...
-	cause why let all that good work go to waste?!
 
-  the large padding is used to position the labels
-  on top of the visual UI, so the switch UI itself
-  can be mouse clicked or finger tapped to toggle
-  the current option
-*/
 .radio-switch label:first-of-type {
 	padding-right: 5em;
 }
@@ -264,7 +249,7 @@ footer {
 	polyfill for you for a bit...
  */
 .radio-switch:focus-within label:first-of-type:after {
-	box-shadow: 0 0 0 2px #fff, 0 0 0 4px #2196f3;
+	box-shadow: 0 0 0 2px var(--white), 0 0 0 4px var(--marina);
 }
 
 /* polyfill class*/
@@ -275,7 +260,7 @@ footer {
 /* making the switch UI.  */
 .radio-switch label:first-of-type:before,
 .radio-switch label:first-of-type:after {
-	border: 1px solid #aaa;
+	border: 1px solid var(--onyx);
 	content: "";
 	height: 2em;
 	overflow: hidden;
@@ -285,8 +270,8 @@ footer {
 }
 
 .radio-switch label:first-of-type:before {
-	background: #fff;
-	border: 1px solid #aaa;
+	background: var(--white);
+	border: 1px solid var(--onyx);
 	border-radius: 100%;
 	position: absolute;
 	right: -.075em;
@@ -297,19 +282,16 @@ footer {
 }
 
 .radio-switch label:first-of-type:after {
-	background: #222;
+	background: #777;
 	border-radius: 1em;
 	margin: 0 1em;
 	transition: background .2s ease-in-out;
 	width: 4em;
 }
 
-/*
-	Visually change the switch UI to match the
-	checked state of the first radio button
-*/
+
 .radio-switch input:first-of-type:checked ~ label:first-of-type:after {
-	background: #2196f3;
+	background: var(--marina);
 }
 
 .radio-switch input:first-of-type:checked ~ label:first-of-type:before {
