--- a/7_portfolio_FEM/style.css
+++ b/7_portfolio_FEM/style.css
@@ -72,7 +72,7 @@ a:hover {
   color: var(--marina);
 }
 
-}
+
 /* svg styling */
 .icons {
   list-style-type: none;
@@ -191,17 +191,15 @@ footer {
 
 @layer switch{
 
-}
-
 .radio-switch {
 	border: none;
 	padding: 0;
 	white-space: nowrap;
   display: flex;
-  justify-content: flex-end;
+  justify-content: center;
   margin-bottom: 2rem;
 }
-
+}
 
 
 
@@ -346,6 +344,10 @@ footer {
   }
   .footer-text .icons {
     grid-column: 1/4;
+  }
+
+  .radio-switch{
+    justify-content: flex-end;
   }
 }
 @media (min-width: 850px) {
