--- a/8_spaceProject/styles.css
+++ b/8_spaceProject/styles.css
@@ -33,11 +33,13 @@ img {
     border-bottom: 1px solid #ccc;
     gap: 0;
     align-items: center;
+}
 
+.card:nth-last-child{
+    border: none;
 }
 
 .card h2{
-    border: 1px solid red;
     margin: 0;
     font-size: 1.2rem;
 }
@@ -45,4 +47,52 @@ img {
 .card img{
     grid-column: 2/3;
     grid-row: 1/3;
+}
+
+.card p{
+    margin: 0;
+}
+
+.feature {
+  grid-column: 1/3;
+  border: 1px solid #ccc;
+  padding: 1rem;
+  border-radius: 5px;
+}
+
+.feature img{
+    grid-column: 1/3;
+    grid-row: 2/3;
+}
+
+.feature p:last-child{
+    grid-row: 3/4;
+    margin-top: 2rem;
+}
+
+.feature p:not(:has(a)) {
+    display: none;
+}
+
+.card {
+display: block;
+border: 1px solid #ccc;
+border-radius: 5px;
+padding: 1rem;
+}
+
+
+@media (min-width: 500px){
+
+
+    .allo{
+        display: grid;
+        grid-template-columns: 1fr 1fr;
+        gap: 1rem;
+    }
+
+     .feature{
+        grid-column: 1/3;
+
+     }
 }
